--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="_00">00</string>
     <string name="language">Language</string>
     <string name="choose_your_language">Choose your language</string>
+    <string name="deleate_counters">Deleate Counters</string>
+    <string name="deleate_all_existing_counters">Deleate all existing Counters</string>
+    <string name="delete_counters">Delete Counters</string>
+    <string name="delete_all_existing_counters">Delete all existing Counters</string>
+    <string name="count_it">Count IT</string>
 </resources>
